--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>我的效率助理儀表板</title>
     
-    <link rel="manifest" href="/manifest.json"> 
+    <link rel="manifest" href="manifest.json"> 
     <meta name="theme-color" content="#4a90e2">
     
     <style>
